QE-643 fix spacing css

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/media-cta-banner/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/media-cta-banner/style.scss
@@ -27,6 +27,10 @@
 				width: 75%;
 			}
 		}
+
+		h4 {
+			margin-top: var(--spacing-4);
+		}
 	}
 
 	&.color-context--gray {
